--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,35 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  background-color: black;
+  
 }
 
-.App-logo {
+
+
+.circular-container {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 2px solid black;
+}
+
+.circular-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.profile-picture {
+  max-width: 200px;
+  max-height: 200px;
+}
+
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -36,3 +63,4 @@
     transform: rotate(360deg);
   }
 }
+ */
